personal-site/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

@layer components {

  .rothwood {
    font-family: "rothwood", serif;
    font-weight: 400;
    font-style: normal;
  }
  .rothwood-bold {
    font-family: "rothwood", serif;
    font-weight: 700;
    font-style: normal;
  }

  .abril {
    font-family: "abril-fatface", serif;
    font-weight: 400;
    font-style: normal;
  }

  .aqva {
    font-family: "rl-aqva", sans-serif;
    font-weight: 900;
    font-style: normal;
  }

  .bio {
    font-family: "bio-sans", sans-serif;
    font-weight: 400;
    font-style: normal;
  }

  .inter {
      font-family: "inter-variable",sans-serif;
      font-variation-settings: 'wght' 500, 'slnt' 0;
  }

}

